@@ -38,10 +38,11 @@ CAMERA_SMART_START_X   10 # smart camera start position
 CAMERA_SMART_START_Y   30 # ( relative to cycle )
 CAMERA_SMART_START_Z   2
 
-CAMERA_FREE_START_X    10 # free camera start position
+CAMERA_FREE_START_X    10 # free camera start position and heading
 CAMERA_FREE_START_Y   -70 # ( relative to cycle )
-CAMERA_FREE_START_Z    100
-
+CAMERA_FREE_START_Z    100 
+CAMERA_FREE_START_ROTATE 0
+CAMERA_FREE_START_PITCH  0 # (override pitching to center the cycle if != 0)
 
                                 # custom camera position
 CAMERA_CUSTOM_BACK    6         # how much the custom camera is moved back
