@@ -37,7 +37,11 @@ Changes since 0.3.1
 - New helper program armagetronad-serverquery. Fetches the master list and
   advanced server information, and outputs it in a JSON format. Only available
   in dedicated server builds.
-
+- Tutorials and Challenges
+- Resource corruption can be detected in some cases and triggers a redownload.
+- New camera settings: CAMERA_FREE_START_PITCH/ROTATE adjust direction of free camera
+- New camera commands: WARP_CAMERA warps one camera to a specified setup,
+  SAVE_CAMERAS prints the commands to restore the current configuration.
 
 Changes since 0.3.0
 ===================
